added weights and bias as a way to evaluate and record the progress

--- a/config/tmp.env
+++ b/config/tmp.env
@@ -1,6 +1,14 @@
 VERBOSE=True
-BATCH_SIZE=128
-N_EPOCHS=200
+
+BATCH_SIZE=256
+N_EPOCHS=32
 NOISE_DIMENSION=64
 LR=0.00001
-DISPLAY_STEP=500
+DISPLAY_STEP=10
+
+# Use empty project to disable wandb
+# WANDB_PROJECT=cv-gans-generation
+
+STORE_WANDB_IMAGES=True
+VISUALIZE_IMAGES=False
+STORE_LOCAL_IMAGES=False
